--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,17 +1,5 @@
-body {
-  padding: 3em;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 1em;
-}
-
-textarea {
-  resize: none;
-}
-
-.inlineBlock {
- display: inline-block;
-}
-
-.topAligned {
- vertical-align: top;
+.bottom {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
