--- a/client/css/spotify.css
+++ b/client/css/spotify.css
@@ -1,4 +1,4 @@
-.content:before {
+.content::before {
   content: "";
   position: fixed;
   left: 0;
@@ -6,7 +6,7 @@
   z-index: -1;
 
   display: block;
-  background-image: -moz-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://www.sohohousechicago.com/system/files/012015/54ad5d58f942617cc2000041/xlarge/063676_089.jpg?1424778422);
+  background-image: url("https://www.sohohousechicago.com/system/files/012015/54ad5d58f942617cc2000041/xlarge/063676_089.jpg?1424778422");
   transform: scale(1.03);
   width: 100%;
   height: 100%;
